Fix z-index search bar issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,7 +189,7 @@ ul {
 #hero {
   max-width: 700px;
   align-content: center;
-  z-index: 1;
+  z-index: 99;
   position: relative;
 }
 
